# django-rest-ebac

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
ebac/: asgi.py  settings.py  urls.py  wsgi.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: __init__.py
order/tests/test_viewsets/: __init__.py  test_order_viewset.py
order/viewsets/: order_viewset.py
products/: admin.py  factories.py  urls.py
products/migrations/: 0001_initial.py
products/models/: __init__.py
products/serializers/: __init__.py  category_serializer.py  product_serializer.py
products/tests/: __init__.py
products/tests/test_viewset/: test_product_viewset.py
products/viewsets/: product_viewset.py
